--- a/bat.html
+++ b/bat.html
@@ -45,8 +45,8 @@
             <div class="text-black ">
                 <h2 class="text-5xl font-medium mb-6">SportVilla</h2>
                 <h1 class="text-3xl lg:text-5xl uppercase font-bold mb-10 lg:mb-14">Bat !!</span>
-                </div>
             </div>
+        </div>
         </div>
         <div class="flex justify-center items-center order-1 lg:order-2">
             <img class="lg:w-9/12 md:w-1/2" src="images/background1.jpeg" alt="logo of summer sale">
@@ -120,7 +120,7 @@
                     </div>
                     <!-- card number 4 -->
                     <div>
-                        <div onclick="On_Click('card-name-3','card-price-3')"
+                        <div onclick="On_Click('card-name-4','card-price-4')"
                             class="card w-80 h-80  shadow-xl text-center cursor-pointer">
                             <figure class="card-background-color w-72 h-48 m-4 rounded-sm"><img class="p-4"
                                     src="images/bat4.jpg" alt="Home Cooker" /></figure>
@@ -132,14 +132,14 @@
                                 <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
                             </div>
                             <div class="card-bodytext">
-                                <h2 id="card-name-3" class="text-xl text-black font-medium">SK Bats</h2>
-                                <p><span id="card-price-3">5000.00</span> TK</p>
+                                <h2 id="card-name-4" class="text-xl text-black font-medium">SK Bats</h2>
+                                <p><span id="card-price-4">5000.00</span> TK</p>
                             </div>
                         </div>
                     </div>
                     <!-- card number 5 -->
                     <div>
-                        <div onclick="On_Click('card-name-3','card-price-3')"
+                        <div onclick="On_Click('card-name-5','card-price-5')"
                             class="card w-80 h-80  shadow-xl text-center cursor-pointer">
                             <figure class="card-background-color w-72 h-48 m-4 rounded-sm"><img class="p-4"
                                     src="images/bat5.jpeg" alt="Home Cooker" /></figure>
@@ -151,14 +151,14 @@
                                 <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
                             </div>
                             <div class="card-bodytext">
-                                <h2 id="card-name-3" class="text-xl text-black font-medium">Reebok Bats</h2>
-                                <p><span id="card-price-3">60000.00</span> TK</p>
+                                <h2 id="card-name-5" class="text-xl text-black font-medium">Reebok Bats</h2>
+                                <p><span id="card-price-5">60000.00</span> TK</p>
                             </div>
                         </div>
                     </div>
                     <!-- card number 6 -->
                     <div>
-                        <div onclick="On_Click('card-name-3','card-price-3')"
+                        <div onclick="On_Click('card-name-6','card-price-6')"
                             class="card w-80 h-80  shadow-xl text-center cursor-pointer">
                             <figure class="card-background-color w-72 h-48 m-4 rounded-sm"><img class="p-4"
                                     src="images/bat6.jpeg" alt="Home Cooker" /></figure>
@@ -170,8 +170,8 @@
                                 <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
                             </div>
                             <div class="card-bodytext">
-                                <h2 id="card-name-3" class="text-xl text-black font-medium">Kokabura Bats</h2>
-                                <p><span id="card-price-3">100000.00</span> TK</p>
+                                <h2 id="card-name-6" class="text-xl text-black font-medium">Kokabura Bats</h2>
+                                <p><span id="card-price-6">100000.00</span> TK</p>
                             </div>
                         </div>
                     </div>
@@ -231,31 +231,28 @@
     </main>
     <footer class="footer p-10 bg-base-300 text-base-content">
         <nav>
-            <header class="footer-title">Services</header>
-            <a class="link link-hover">Branding</a>
-            <a class="link link-hover">Design</a>
-        </nav>
-        <nav>
             <header class="footer-title">Company</header>
-            <a class="link link-hover">About us</a>
-            <a class="link link-hover">Contact</a>
+            <a href="aboutus.html" class="link link-hover">About us</a>
+            <a href="https://www.instagram.com/rokib_32/?fbclid=IwAR2Clibli9SBjoXwaVtEIUXdqChxW6-fIiWRuCrzMOWpqSjMEURRx-a5KSc"
+                class="link link-hover">Contact</a>
         </nav>
         <nav>
             <header class="footer-title">Social</header>
             <div class="grid grid-flow-col gap-4">
-                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                        class="fill-current">
+                <a href="https://x.com/elonmusk?t=vnL2rM9GxWbLulq_GQGB0w&s=09"><svg xmlns="http://www.w3.org/2000/svg"
+                        width="24" height="24" viewBox="0 0 24 24" class="fill-current">
                         <path
                             d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z">
                         </path>
                     </svg></a>
-                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                        class="fill-current">
+                <a href="https://www.youtube.com/@RokibHasan098"><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                        height="24" viewBox="0 0 24 24" class="fill-current">
                         <path
                             d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z">
                         </path>
                     </svg></a>
-                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                <a href="https://www.facebook.com/rokib.hasan.5686322?mibextid=ZbWKwL"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                         class="fill-current">
                         <path
                             d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
